load("@rules_mgit//:def.bzl", "mgit_repo_rules")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "nogo")
load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")

mgit_repo_rules(
    go_prefix = "mgit.at/prometheus-mgit-exporter",
)

go_library(
    name = "prometheus-mgit-exporter_lib",
    srcs = [
        "certfile.go",
        "elk.go",
        "exec.go",
        "fstab.go",
        "main.go",
        "mcelog.go",
        "mysqlbin.go",
        "ptheartbeat.go",
        "rasdaemon.go",
    ],
    importpath = "mgit.at/prometheus-mgit-exporter",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_mattn_go_zglob//:go-zglob",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_binary(
    name = "prometheus-mgit-exporter",
    embed = [":prometheus-mgit-exporter_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "debian-data",
    extension = "tar.gz",
    files = {
        ":prometheus-mgit-exporter": "/usr/bin/prometheus-mgit-exporter",
        ":config.json": "/etc/prometheus-mgit-exporter/config.json",
        ":prometheus-mgit-exporter.service": "/lib/systemd/system/prometheus-mgit-exporter.service",
        ":README.md": "/usr/share/doc/prometheus-mgit-exporter/README.md",
        ":LICENSE": "/usr/share/doc/prometheus-mgit-exporter/LICENSE",
    },
    modes = {
        "/usr/bin/prometheus-mgit-exporter": "0755",
        "/etc/prometheus-mgit-exporter/config.json": "0644",
        "/lib/systemd/system/prometheus-mgit-exporter.service": "0644",
        "/usr/share/doc/prometheus-mgit-exporter/README.md": "0644",
        "/usr/share/doc/prometheus-mgit-exporter/LICENSE": "0644",
    },
)

pkg_deb(
    name = "debian",
    architecture = "amd64",
    built_using = "bazel",
    conffiles = [
        "/etc/prometheus-mgit-exporter/config.json\n",
    ],
    data = ":debian-data",
    depends = ["sqlite3"],
    description = "A collection of useful monitoring for Prometheus by mgIT GmbH.",
    homepage = "https://mgit.at/",
    maintainer = "Christoph Hack <chack@mgit.at>",
    package = "prometheus-mgit-exporter",
    tags = [
        "repo:dpkg-buster",
        "repo:dpkg-stretch",
    ],
    version = "1.8.2",
    visibility = ["//visibility:public"],
)
