load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "nogo")
load("@rules_pkg//:pkg.bzl", "pkg_deb", "pkg_tar")

# gazelle:prefix mgit.at/prometheus-mgit-exporter
gazelle(name = "gazelle")

go_library(
    name = "prometheus-mgit-exporter_lib",
    srcs = [
        "certfile.go",
        "crypt.go",
        "elk.go",
        "exec.go",
        "fstab.go",
        "main.go",
        "mcelog.go",
        "mysqlbin.go",
        "ptheartbeat.go",
        "rasdaemon.go",
    ],
    importpath = "mgit.at/prometheus-mgit-exporter",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_anatol_luks_go//:luks_go",
        "@com_github_mattn_go_zglob//:go-zglob",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_modernc_sqlite//:sqlite",
    ],
)

go_binary(
    name = "prometheus-mgit-exporter",
    embed = [":prometheus-mgit-exporter_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "prometheus-mgit-exporter-arm64",
    embed = [":prometheus-mgit-exporter_lib"],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "debian-data",
    extension = "tar.gz",
    files = {
        ":prometheus-mgit-exporter": "/usr/bin/prometheus-mgit-exporter",
        ":config.json": "/etc/prometheus-mgit-exporter/config.json",
        ":prometheus-mgit-exporter.service": "/lib/systemd/system/prometheus-mgit-exporter.service",
        ":README.md": "/usr/share/doc/prometheus-mgit-exporter/README.md",
        ":LICENSE": "/usr/share/doc/prometheus-mgit-exporter/LICENSE",
    },
    modes = {
        "/usr/bin/prometheus-mgit-exporter": "0755",
        "/etc/prometheus-mgit-exporter/config.json": "0644",
        "/lib/systemd/system/prometheus-mgit-exporter.service": "0644",
        "/usr/share/doc/prometheus-mgit-exporter/README.md": "0644",
        "/usr/share/doc/prometheus-mgit-exporter/LICENSE": "0644",
    },
)

pkg_tar(
    name = "debian-data-arm64",
    extension = "tar.gz",
    files = {
        ":prometheus-mgit-exporter-arm64": "/usr/bin/prometheus-mgit-exporter",
        ":config.json": "/etc/prometheus-mgit-exporter/config.json",
        ":prometheus-mgit-exporter.service": "/lib/systemd/system/prometheus-mgit-exporter.service",
        ":README.md": "/usr/share/doc/prometheus-mgit-exporter/README.md",
        ":LICENSE": "/usr/share/doc/prometheus-mgit-exporter/LICENSE",
    },
    modes = {
        "/usr/bin/prometheus-mgit-exporter": "0755",
        "/etc/prometheus-mgit-exporter/config.json": "0644",
        "/lib/systemd/system/prometheus-mgit-exporter.service": "0644",
        "/usr/share/doc/prometheus-mgit-exporter/README.md": "0644",
        "/usr/share/doc/prometheus-mgit-exporter/LICENSE": "0644",
    },
)

pkg_deb(
    name = "debian",
    architecture = "amd64",
    built_using = "bazel",
    conffiles = [
        "/etc/prometheus-mgit-exporter/config.json\n",
    ],
    data = ":debian-data",
    description = "A collection of useful monitoring for Prometheus by mgIT GmbH.",
    homepage = "https://mgit.at/",
    maintainer = "Jonas Reindl <jreindl@mgit.at>",
    package = "prometheus-mgit-exporter",
    tags = [
        "repo:dpkg-bionic",
        "repo:dpkg-bookworm",
        "repo:dpkg-bullseye",
        "repo:dpkg-buster",
        "repo:dpkg-focal",
        "repo:dpkg-jammy",
        "repo:dpkg-noble",
        "repo:dpkg-stretch",
        "repo:dpkg-xenial",
    ],
    version = "1.10.0",
    visibility = ["//visibility:public"],
)

pkg_deb(
    name = "debian-arm64",
    architecture = "arm64",
    built_using = "bazel",
    conffiles = [
        "/etc/prometheus-mgit-exporter/config.json\n",
    ],
    data = ":debian-data-arm64",
    description = "A collection of useful monitoring for Prometheus by mgIT GmbH.",
    homepage = "https://mgit.at/",
    maintainer = "Jonas Reindl <jreindl@mgit.at>",
    package = "prometheus-mgit-exporter",
    tags = [
        "repo:dpkg-bookworm",
        "repo:dpkg-bullseye",
        "repo:dpkg-buster",
    ],
    version = "1.10.0",
    visibility = ["//visibility:public"],
)
