module(
    repo_name = "at_mgit_prometheus_mgit_exporter",
)

bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "rules_go", version = "0.41.0")
bazel_dep(name = "gazelle", version = "0.32.0")

# ------------------------------------------------------------------------------
# All *direct* Go dependencies of the module have to be listed explicitly.
# ------------------------------------------------------------------------------

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "org_modernc_sqlite",
    "com_github_pkg_errors",
    "com_github_prometheus_client_golang",
    "com_github_mattn_go_zglob",
)
